Changed colors of the website

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,6 @@
 [theme]
-primaryColor="#2633b0"
-secondaryBackgroundColor="#ffe6eb"
+primaryColor="#27474E"
+secondaryBackgroundColor="#FCE38A"
+
+#primaryColor="#2633b0"
+#secondaryBackgroundColor="#ffe6eb"
